--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -34,6 +34,8 @@
 
 .photo-list__user-details {
   display: flex;
+  justify-content: flex-start;
+  align-content: center;
 }
 
 .photo-list__user-info {
