--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -9,6 +9,9 @@
   width: 55%;
   overflow-y: scroll;
   border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .photo-details-modal__close-button {
@@ -37,7 +40,7 @@
 .photo-details-modal__top-bar {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin: 16px;
   margin-top: 8px;
   align-items: center;
@@ -55,6 +58,8 @@
   margin-top: 24px;
   margin-bottom: 24px;
   width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .photo-details-modal__photographer-location {
