--- a/frontend/src/styles/PhotoFavButton.scss
+++ b/frontend/src/styles/PhotoFavButton.scss
@@ -1,18 +1,21 @@
 .photo-list__fav-icon {
   position: relative;
-  top: 8px;
+  top: 18px;
   right: -8px;
   cursor: pointer;
   margin-bottom: -30px;
-  border-width: 0.1px;
   background-color: #EEEEEE;
-  width: 32px;
-  height: 32px;
+  width: 40px;
+  height: 40px;
   text-align: center;
-  border-radius: 100%;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 8px;
 }
 
 .photo-list__fav-icon-svg {
-  padding: 7px;
-  top: 2px;
+  width: 24px;
+  height: 20px;
 }
