--- a/frontend/src/styles/TopicListItem.scss
+++ b/frontend/src/styles/TopicListItem.scss
@@ -1,6 +1,11 @@
 .topic-list__item {
   line-height: 24px;
   margin-left: 24px;
+
+  &.clicked span {
+    text-decoration: none;
+    color: #2b2b2b;
+  }
 }
 
 .topic-list__item span {
