--- a/frontend/src/styles/LikedPhotos.scss
+++ b/frontend/src/styles/LikedPhotos.scss
@@ -1,8 +1,15 @@
-.photo-list {
+ .liked-list,
+ .liked-photos {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+.photo-list:after {
+  content: "";
+  flex: 0 1 30%;
+  margin: 5px;
 }
